# roxidy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  biome.json  check_output.txt  clippy_output.txt  justfile  package.json  pi.py  playwright.config.ts  pnpm-lock.yaml  proof-of-concept.md  vitest.config.ts
docs/: BROWSER_DEV.md  ai-integration.md  architecture.md  cli-plan.md  decisions.md  eval-setup.md  frontend-state.md  gaps-and-todos.md  lancedb-viewer.md  mode-switching.md  security.md  shell-integration.md  sidecar.md  tauri-ipc.md  theme-tokens.md  tree-sitter-integration-plan.md  vtcode-integration.md
docs/plans/: cli-update-plan.md  future-evals.md  sidecar-evals-plan.md  sidecar-layers-plan.md  sidecar-simplification.md
e2e/: mock-devtools.spec.ts  tauri-mocks.spec.ts
evals/: README.md  config.py  conftest.py  inspect_qbit_eval.py  pyproject.toml  sidecar_scorers.py  sidecar_utils.py  test_agent.py  test_cli.py  test_file_operations.py  test_server_api.py  test_session_management.py  test_sidecar.py  test_sidecar_db.py  test_sidecar_sse_diagnostics.py
evals/client/: __init__.py  events.py  http.py  runner.py
evals/sidecar/: __init__.py  db.py
mistral-testbed/: Cargo.toml
mistral-testbed/src/: main.rs
src/: App.css  App.tsx  index.css  main.tsx  mocks.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/rig-anthropic-vertex/: Cargo.toml
src-tauri/crates/rig-anthropic-vertex/examples/: test_vertex.rs
src-tauri/crates/rig-anthropic-vertex/src/: client.rs  completion.rs  error.rs  lib.rs  streaming.rs  types.rs
src-tauri/proptest-regressions/sidecar/: storage.txt
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: agent_bridge.rs  agentic_loop.rs  bridge_context.rs  bridge_hitl.rs  bridge_policy.rs  bridge_session.rs  commands.rs  context_manager.rs  context_pruner.rs  events.rs  llm_client.rs  loop_detection.rs  mod.rs  session.rs  sub_agent.rs  sub_agent_executor.rs  system_prompt.rs  token_budget.rs  token_trunc.rs  tool_definitions.rs  tool_executors.rs  tool_policy.rs  workflow.rs
src-tauri/src/ai/commands/: config.rs  core.rs  mod.rs  session.rs  workflow.rs
src-tauri/src/ai/hitl/: approval_recorder.rs  mod.rs
src-tauri/src/ai/workflow/: models.rs  registry.rs
src-tauri/src/ai/workflow/definitions/: mod.rs
src-tauri/src/ai/workflow/definitions/git_commit/: mod.rs
src-tauri/src/cli/: args.rs  bootstrap.rs  mod.rs  output.rs  repl.rs  runner.rs
src-tauri/src/cli/server/: handlers.rs  mod.rs  session.rs  types.rs
src-tauri/src/commands/: mod.rs  prompts.rs  pty.rs  shell.rs  themes.rs
src-tauri/src/indexer/: commands.rs  mod.rs  state.rs
src-tauri/src/pty/: manager.rs  mod.rs  parser.rs
src-tauri/src/runtime/: cli.rs  mod.rs  tauri.rs
src-tauri/src/settings/: commands.rs  loader.rs  mod.rs  schema.rs  template.toml
src-tauri/src/sidecar/: artifacts.rs  capture.rs  commands.rs  commits.rs  config.rs  events.rs  formats.rs  integration_tests.rs  mod.rs  models.rs  processor.rs  prompts.rs  schema_verification_test.rs  session.rs  state.rs  storage.rs  synthesis.rs  synthesis_llm.rs
src-tauri/src/sidecar/layer1/: api.rs  events.rs  mod.rs  processor.rs  prompt.rs  state.rs  storage.rs  verification_tests.rs
src-tauri/src/tavily/: mod.rs
src-tauri/tests/: cli_integration.sh
src-tauri/tests/integration/: conftest.py  pyproject.toml  test_cli.py
src/assets/: google-fonts.json
src/components/AgentChat/: AgentChatList.tsx  AgentMessage.tsx  ToolApprovalDialog.tsx  ToolCallCard.tsx  index.ts
src/components/CommandBlock/: CommandBlock.tsx  CommandBlockList.tsx  index.ts
src/components/CommandInput/: CommandInput.tsx
src/components/CommandPalette/: CommandPalette.tsx  index.ts
src/components/FileCommandPopup/: FileCommandPopup.tsx
src/components/Markdown/: Markdown.tsx
src/components/MockDevTools/: index.tsx
src/components/ModeToggle/: ModeToggle.tsx
src/components/SessionBrowser/: SessionBrowser.tsx  index.ts
src/components/Settings/: AdvancedSettings.tsx  AgentSettings.tsx  AiSettings.tsx  SettingsDialog.tsx  TerminalSettings.tsx  ThemeDesigner.tsx  ThemePicker.tsx  ThemeSettings.tsx  index.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Sidecar/: CommitDraft.tsx  ContextPanel.tsx  SessionHistory.tsx  SidecarNotifications.tsx  SidecarPanel.tsx  SidecarStatus.tsx  index.ts
src/components/SlashCommandPopup/: SlashCommandPopup.tsx  index.ts
src/components/StatusBar/: StatusBar.tsx
src/components/TabBar/: TabBar.tsx
src/components/Terminal/: Terminal.tsx
src/components/ThinkingBlock/: ThinkingBlock.tsx  index.ts
src/components/ToolCallDisplay/: ToolCallDisplay.tsx  ToolGroup.tsx  index.ts
src/components/TruncatedOutput/: TruncatedOutput.tsx
src/components/UnifiedInput/: UnifiedInput.tsx  index.ts
src/components/UnifiedTimeline/: UnifiedBlock.tsx  UnifiedTimeline.test.tsx  UnifiedTimeline.tsx  index.ts
src/components/WelcomeScreen/: WelcomeScreen.tsx
src/components/WorkflowProgress/: WorkflowProgress.test.tsx
src/components/WorkflowTree/: WorkflowTree.test.tsx
src/components/ui/: command.tsx  dropdown-menu.tsx  label.tsx  resizable.tsx  select.tsx  sheet.tsx  switch.tsx
src/hooks/: useAiEvents.ts  useCommandHistory.test.ts  useCommandHistory.ts  useLayer1Events.ts  useSidecarEvents.ts  useSlashCommands.ts  useTauriEvents.test.ts  useTauriEvents.ts  useTheme.tsx
src/lib/: ai.ts  ansi.ts  settings.ts  sidecar.ts  tauri.ts  themes.ts  toolGrouping.ts  tools.ts
src/lib/theme/: ThemeLoader.ts  ThemeManager.ts  index.ts  registry.ts  schema.json  themeNameUtils.ts  types.ts
src/lib/theme/builtin/: index.ts
src/lib/theme/builtin/obsidian-ember/: theme.ts
src/lib/theme/builtin/qbit/: theme.ts
src/pages/: ComponentTestbed.tsx
src/store/: index.test.ts  index.ts  workflow.test.ts
src/styles/: ansi-colors.css
src/test/: setup.ts
src/test/mocks/: tauri-event.ts
