[project]
name = "qbit-cli-tests"
version = "0.1.0"
description = "Integration tests for qbit-cli"
requires-python = ">=3.10"
dependencies = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",  # Parallel test execution across workers
    "pytest-asyncio>=0.23.0",  # Async test support
    "python-dotenv>=1.0",
    "deepeval>=2.0",
    "httpx>=0.27.0",  # Async HTTP client for qbit_client
    "pyyaml>=6.0",  # YAML parsing for state.md frontmatter
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Default timeout for all tests (3 minutes)
# Individual tests can override with @pytest.mark.timeout(seconds)
timeout = 180
# Use thread method for timeout (works better with subprocesses)
timeout_method = "thread"
# pytest-asyncio mode: auto marks all async test functions
asyncio_mode = "auto"
# Use class-scoped event loops for async fixtures and tests
# This allows class-scoped fixtures to share LLM calls across tests in the same class
asyncio_default_fixture_loop_scope = "class"
asyncio_default_test_loop_scope = "class"
# Suppress httpx/httpcore async cleanup warnings (known issue with pytest-asyncio)
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
