[package]
name = "rig-anthropic-vertex"
version = "0.1.0"
edition = "2021"
description = "Anthropic Claude models on Google Cloud Vertex AI provider for rig"
license = "MIT"
repository = "https://github.com/xlyk/qbit"

[dependencies]
# Rig core
rig-core = "0.23"

# Google Cloud authentication
gcp_auth = "0.12"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async
tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "test_vertex"
path = "examples/test_vertex.rs"
